<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    android:elevation="8dp"
    tools:context=".ui.films.filmdetail.FilmDetailFragment">

    <ImageView
        android:id="@+id/iv_movie_banner"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="8dp"
        android:elevation="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/line1"
        tools:src="@tools:sample/avatars"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@drawable/corner"
        android:layout_marginHorizontal="8dp"
        android:elevation="16dp"
        app:layout_constraintBottom_toTopOf="@id/line2"
        app:layout_constraintTop_toBottomOf="@id/iv_movie_banner">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/name"
            android:textColor="@color/red"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/hello_blank_fragment"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/corner"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        android:elevation="16dp"
        app:layout_constraintBottom_toTopOf="@id/line3"
        app:layout_constraintTop_toBottomOf="@id/line1">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/original_name"
            android:textColor="@color/red"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_original"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/textview"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        android:background="@drawable/corner"
        android:layout_marginHorizontal="16dp"
        android:elevation="16dp"
        app:layout_constraintBottom_toTopOf="@id/line4"
        app:layout_constraintTop_toBottomOf="@id/line2">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/original_romanised_name"
            android:textColor="@color/red"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_original_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/textview"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/line4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        android:elevation="16dp"
        android:background="@drawable/corner"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/line5"
        app:layout_constraintTop_toBottomOf="@id/line3">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/director"
            android:textSize="20sp"
            android:textColor="@color/red" />

        <TextView
            android:id="@+id/tv_director"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/corner"
        android:elevation="16dp"
        app:layout_constraintBottom_toTopOf="@id/line6"
        app:layout_constraintTop_toBottomOf="@id/line4">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/date_of_release"
            android:textColor="@color/red" />

        <TextView
            android:id="@+id/tv_released"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/corner"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        android:elevation="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line5">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/description"
            android:textColor="@color/red" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>